changed image path

--- a/_posts/2025-05-05-AsciiDoc.md
+++ b/_posts/2025-05-05-AsciiDoc.md
@@ -6,7 +6,7 @@ date: 2025-05-05 10:00:00 +0530
 categories: [blog]
 tags: [Concepts, Tutorials]
 image: 
-    path: /assets/lib/Ascii.jpg
+    path: /assets/img/Ascii.jpg
     alt: Ascii
     width: 1200
     height: 630
