--- a/_posts/2025-06-20-Evolve.md
+++ b/_posts/2025-06-20-Evolve.md
@@ -6,7 +6,7 @@ date: 2025-06-20 10:00:00 +0530
 categories: [blog]
 tags: [Concept]
 image:
-  path: /assets/img/evolve.jpg
+  path: /assets/img/evolve.png
   alt: "Evolve"
   width: 1200
   height: 630
