modified pola page

--- a/_posts/2025-04-18-pola.md
+++ b/_posts/2025-04-18-pola.md
@@ -40,9 +40,7 @@ Why?
 
 Let’s say I try using **Camtasia**, **Premiere Pro**, or **Shotcut**.
 
-If these tools didn’t follow similar design principles as FL Studio—  
-like **timelines**, **playlists**, **drag-and-drop**, **layering**—  
-I’d struggle. I might even drop them entirely.
+If these tools didn’t follow similar design principles as FL Studio—like **timelines**, **playlists**, **drag-and-drop**,**layering**—I’d struggle. I might even drop them entirely.
 
 > **"Every extra step you make a user take reduces adoption."** – *Steve Krug* (not me!)
 
