--- a/_posts/2025-05-05-AsciiDoc.md
+++ b/_posts/2025-05-05-AsciiDoc.md
@@ -31,7 +31,7 @@ AsciiDoc content is written in plain text. To format it, you add markup characte
 
 These are common text formatting options available in ASCII Doc.
 
-```markdown
+```text
 = Hello, AsciiDoc!  // This is a Heading
 
 This is an interactive editor.  // This is normal style text.
@@ -55,7 +55,7 @@ puts 'Hello, World!'
 
 No more complicated use of XML tags like conref. Simply add the following line and the contents are added during export.
 
-```ruby
+```text
 include::reuse.adoc    //reference to the content that is specified elsewhere in your directory.
 ```
 
@@ -71,16 +71,18 @@ For example, if we want to create content for a product that has roles defined s
 
 You can define attributes as:
 
-```markdown
+```text
+
 ifdef::role-admin[]            //beginning of the condition
 == Admin Section
 Only shown in the Admin version of the PDF.
 endif::role-admin[]            //end of the condition
+
 ```
 
 To generate the PDF using the attributes, you run the following command:
 
-```powershell
+```
 asciidoctor-pdf -a role-admin file.adoc
 ```
 
@@ -164,7 +166,7 @@ toc:
 * **file.adoc** specifies the file to be converted into pdf.
     
 
-```powershell
+```
 asciidoctor-pdf -a pdf-theme=mytheme.yml file.adoc
 ```
 
