--- a/_posts/2025-04-18-pola.md
+++ b/_posts/2025-04-18-pola.md
@@ -1,10 +1,10 @@
 ---
 title: Principle of Least Astonishment
 description: The Principle of Least Astonishment in Technical Writing
-Author: Steev Kundukulangara
+author: Steev Kundukulangara
 date: 2025-04-18 10:00:00 +0530
-categories: [blog]
-tags: [Concept]
+categories: [Blog]
+tags: [Concepts]
 image:
   path: /assets/img/pola.png
   alt: "POLA"
@@ -59,8 +59,7 @@ From `A, B, C, D, E, F, G, H` to `I, J, K, L, M, N, O`.
 
 ### Now Meet Rohit:
 
-A long-time user, Rohit, presses `A`—as per the old design—but nothing happens.  
-He searches the documentation, which still refers to `A`.  
+A long-time user, Rohit, presses `A`—as per the old design—but nothing happens.He searches the documentation, which still refers to `A`.  
 Frustrated, he gives up...  
 And **fails to contact Jadoo**.
 
@@ -68,8 +67,7 @@ And **fails to contact Jadoo**.
 
 ## The Lesson?
 
-Had the **documentation team** been informed about the update,  
-Rohit would have had a better experience, and maybe even **established first contact**.
+Had the **documentation team** been informed about the update,Rohit would have had a better experience, and maybe even **established first contact**.
 
 ---
 
