--- a/_posts/2025-05-05-AsciiDoc.md
+++ b/_posts/2025-05-05-AsciiDoc.md
@@ -1,9 +1,9 @@
 ---
 title: AsciiDoc
 description: The Power of OpenSource Authoring Tool
-Author: Steev Kundukulangara
+author: Steev Kundukulangara
 date: 2025-05-05 10:00:00 +0530
-categories: [blog]
+categories: [Blog]
 tags: [Concepts, Tutorials]
 image: 
     path: /assets/img/Ascii.jpg
