--- a/_posts/2025-06-20-Evolve.md
+++ b/_posts/2025-06-20-Evolve.md
@@ -1,9 +1,9 @@
 ---
 title: Evolve or Dissolve
 description: As a technical writer, would you rather dissolve or evolve?
-Author: Steev Kundukulangara
+author: Steev Kundukulangara
 date: 2025-06-20 10:00:00 +0530
-categories: [blog]
+categories: [Blog]
 tags: [Concept]
 image:
   path: /assets/img/evolve.png
@@ -58,8 +58,7 @@ Because there's **always room for growth and new skills**.
 
 > **Ok, I will start learning now...**
 
-This is a **fictional dialogue** inspired by a real-world scenario of me talking to my inner self —  
-more like Swami Nityananda's words:
+This is a **fictional dialogue** inspired by a real-world scenario of me talking to my inner self —more like Swami Nityananda's words:
 
 > _"Me resides in this as Me, as Me is residing in all of that as Me, so that Me, through this Me, is talking to Me."_
 
@@ -67,8 +66,7 @@ more like Swami Nityananda's words:
 
 ## My Real Journey
 
-I used to do my documentation on **Google Docs** because that’s what was offered by the company.  
-Over time, it started getting on my nerves due to the variety of documentation types I was handling.
+I used to do my documentation on **Google Docs** because that’s what was offered by the company. Over time, it started getting on my nerves due to the variety of documentation types I was handling.
 
 Then, the company began encouraging the use of **LLMs**.
 
@@ -89,18 +87,15 @@ I began leveraging the **prompt engineering knowledge** I gained over the months
 - Adopted **OpenAPI**  
 - Introduced **Docs-as-Code** framework
 
-Whenever PMs asked me to draft documents for external stakeholders,  
-I used **Gemini (pre-integrated in GSuite)** with my prompt engineering skills  
+Whenever PMs asked me to draft documents for external stakeholders,I used **Gemini (pre-integrated in GSuite)** with my prompt engineering skills  
 to structure content and refine weak sections.
 
 Another win:  
-I discovered the **OpenAPI bundling process**, which helped extend specs to clients  
-with minimal changes — only a few additional params.
+I discovered the **OpenAPI bundling process**, which helped extend specs to clients with minimal changes — only a few additional params.
 
 ---
 
-These are **just a few examples** of what I brought to the table  
-**as a technical writer equipped with AI skills.**
+These are **just a few examples** of what I brought to the table **as a technical writer equipped with AI skills.**
 
 Now place yourself in my shoes.  
 **What could YOU achieve?**
@@ -124,8 +119,7 @@ Visibility lies in the latter...
 
 ## Bonus
 
-This article is AI-generated —  
-but you can run it through any AI detection tool and it’ll say:  
+This article is AI-generated —but you can run it through any AI detection tool and it’ll say:  
 **"Human-generated."**
 
 > _That’s a skill on its own._
