--- a/_posts/2025-13-03-tech.md
+++ b/_posts/2025-13-03-tech.md
@@ -1,8 +1,8 @@
 ---
 title: Why do you need Technical Writers?
-Author: Steev Kundukulangara
+author: Steev Kundukulangara
 date: 2025-03-13 10:00:00 +0530
-categories: [blog]
+categories: [Blog]
 tags: [Concept]
 image:
   path: /assets/img/tech.png
