modified AsciDoc file

--- a/_posts/2025-05-05-AsciiDoc.md
+++ b/_posts/2025-05-05-AsciiDoc.md
@@ -4,7 +4,7 @@ description: The Power of OpenSource Authoring Tool
 author: Steev Kundukulangara
 date: 2025-05-05 10:00:00 +0530
 categories: [Blog]
-tags: [Concepts, Tutorials]
+tags: [Concept, Tutorials]
 image: 
     path: /assets/img/Ascii.jpg
     alt: Ascii
