modified vale cli file

--- a/_posts/2025-07-09-Vale-CLI.md
+++ b/_posts/2025-07-09-Vale-CLI.md
@@ -1,6 +1,6 @@
 ---
 title: Vale CLI vs AI
-description: Vale CLI combined with AI (Gold for Writers!)
+description: Vale CLI 
 author: Steev Kundukulangara
 date: 2025-07-09 10:00:00 +0530
 categories: [Blog]
@@ -15,7 +15,7 @@ excerpt: How to use Vale CLI
 
 If you are a technical writer that struggles with style guide inconsistencies, I have found a solution for you. Believe me, if you tell me to read a style guide that spans over 100 pages, I wouldn't read that &mdash; thanks to these short videos on social media that has made brain rot. 
 
-Enters **Vale CLI combined with LLM** 
+Enters **Vale CLI** 
 
 I used to post often about how Vale CLI can fix style guide issues, I later realized that the tone, audience, and style varies for documentation and `Vale CLI` cannot do that. On the other hand, AI cannot fix style guide inconsistencies as expected. 
 
