modified evolve doc for tags

--- a/_posts/2025-06-20-Evolve.md
+++ b/_posts/2025-06-20-Evolve.md
@@ -4,7 +4,7 @@ description: As a technical writer, would you rather dissolve or evolve?
 
 date: 2025-06-20 10:00:00 +0530
 categories: [Blog]
-tags: [Concept]
+tags: [Concepts]
 image:
   path: /assets/img/evolve.png
   alt: "Evolve"
