--- a/_posts/2025-13-03-tech.md
+++ b/_posts/2025-13-03-tech.md
@@ -3,7 +3,7 @@ title: Why do you need Technical Writers?
 
 date: 2025-03-13 10:00:00 +0530
 categories: [Blog]
-tags: [Concept]
+tags: [Concepts]
 image:
   path: /assets/img/tech.png
   alt: "tech"
