modified API sculptor file

--- a/_posts/2025-10-26-Sculptor.md
+++ b/_posts/2025-10-26-Sculptor.md
@@ -4,7 +4,7 @@ description: API Sculptor
 
 date: 2025-10-26 10:00:00 +0530
 categories: [Blog]
-tags: [Concepts]
+tags: [Concepts, DocasSystem]
 eventStartDate: 2025-10-26 10:00:00 +0000
 eventEndDate: 2025-10-31 11:30:00 +0000
 excerpt: How I solved real business challenges?
