modified tasks file

--- a/_posts/2025-11-08-tasks.md
+++ b/_posts/2025-11-08-tasks.md
@@ -17,7 +17,7 @@ VS Code's "Run Task" feature provides a bridge between your editing environment 
 
 The core mechanism for this integration is the use of predefined variables. By specifying ${file} as an argument in the task configuration, you instruct VS Code to pass the full path of the currently active file to your script.
 
-This approach allows a script (Example: one using an AI API) to directly read, process, and validate the content of your document upon command.
+This approach allows a script (Example: one using a python program) to directly read, process, and validate the content of your document upon command.
 
 ## Benefits
 
@@ -98,7 +98,7 @@ else:
     print("API key loaded successfully!")
 
 client = OpenAI(
-    base_url="https://prism-api.hinagro.com/gateway",
+    base_url:"<your-base-url>",
     api_key=api_key
 )
 
