modified tasks file

--- a/_posts/2025-11-08-tasks.md
+++ b/_posts/2025-11-08-tasks.md
@@ -50,7 +50,7 @@ You can create a custom VS Code task to run a Python-based AI validation script 
         "type": "shell",
         "command": "python3",
         "args": [
-            "/home/steev.jose/Documents/Prism/main.py", // <-- IMPORTANT: Change this path to your file path.
+            "<your-file-path-where-your-python-file-is-located>", // <-- IMPORTANT: Change this path to your file path.
             "${file}" 
         ],
         "presentation": {
